--- a/server/templates/nav_manager.html
+++ b/server/templates/nav_manager.html
@@ -14,7 +14,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Students</a>
+            <a class="nav-link" href="/manager/student_filter">Students Filter</a>
           </li>
         </ul>
       </div>
