--- a/server/student/templates/student/createCvForm.html
+++ b/server/student/templates/student/createCvForm.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <div class="container">
+
+    
     <div class="formbold-main-wrapper">
         <!-- Author: FormBold Team -->
         <!-- Learn More: https://formbold.com -->
@@ -196,10 +199,10 @@
 
 
 
-        <!-- work experience -->
-        <br><br><br>
+     
+       
 
-
+</div>
 </body>
 <script src="../../static/student/js/repeater.js" type="text/javascript"></script>
 <script>
