updated dashboard page

--- a/server/static/global.css
+++ b/server/static/global.css
@@ -1,10 +1,3 @@
-nav .navbar-nav li a{
-    color: white !important;
-}
-
-.navbar-brand{
-    color: white !important;
-}
 
 .custom-toggler .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
@@ -12,4 +5,26 @@ nav .navbar-nav li a{
 
 .custom-toggler.navbar-toggler {
     border-color: rgb(255,102,203);
-} 
+}
+
+*{
+    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+}
+/* manager style */
+#manager-sidenav, #manager-content{
+    transition: all .5s;
+}
+
+@media (max-width: 768px) {
+    #manager-sidenav {
+        transform: translateX(-260px);
+    }
+    #manager-content{
+        width: 100% !important;
+        margin-left: 0px !important;
+    }
+}
+
+#main-content{
+    color: #292b2c;
+}
