--- a/server/manager/templates/manager/dashboard.html
+++ b/server/manager/templates/manager/dashboard.html
@@ -2,19 +2,59 @@
 
 {% block javascript %}
 <script>
+const data = {
+  labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
+  datasets: [{
+    label: 'Looping tension',
+    data: [65, 59, 80, 81, 26, 55, 40],
+    fill: false,
+    borderColor: 'rgb(75, 192, 192)',
+  }]
+};
+
+const config = {
+  type: 'line',
+  data: data,
+  options: {
+    animations: {
+      tension: {
+        duration: 1000,
+        easing: 'linear',
+        from: 1,
+        to: 0,
+        loop: true
+      }
+    },
+    scales: {
+      y: { // defining min and max so hiding the dataset does not change scale range
+        min: 0,
+        max: 100
+      }
+    }
+  }
+};
+
+var chart = new Chart(document.getElementById("canvas1"), config)
+
+
+
 </script>
 {% endblock %}
 
 {% block content %}
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+</div>
 
 <div class="main" style="position: absolute;height: 100%; width: 100%">
 
-    <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 260px;height:100%; position: absolute;">
+    <div id="manager-sidenav" class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 260px;height:100%; position: fixed;">
         <a href="/manager" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
             <img src="/static/HKBU_Logo.svg" class="pe-3" width="55" height="55">
           <span class="fs-5">HKBU</span>
         </a>
-        <hr>
+        <br>
+
+        <h6 class="text-muted">Navigation</h6>
         <ul class="nav nav-pills flex-column mb-auto">
           <li>
             <a href="#" class="nav-link text-white active">
@@ -29,32 +69,113 @@
             </a>
           </li>
         </ul>
-        <hr>
-        <div class="dropdown">
-          <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-            <strong>mdo</strong>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-            <li><a class="dropdown-item" href="#">New project...</a></li>
-            <li><a class="dropdown-item" href="#">Settings</a></li>
-            <li><a class="dropdown-item" href="#">Profile</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Sign out</a></li>
-          </ul>
-        </div>
-      </div>
+    </div>
 
 
       
-    <div id="content" style="width: calc(100% - 260px); margin-left: 260px;height: 100%">
+    <div id="manager-content" style="width: calc(100% - 260px); margin-left: 260px;height: 100%">
         
-        <nav class="navbar navbar-light bg-white">
-            <div class="container-fluid">
-                <span class="mb-0 h5"><strong>Dashboard</strong></span>
+        <nav class="navbar navbar-light bg-white shadow-sm" id="manager-nav"> 
+            <div class="container-fluid align-content-center">
+              <a class="btn btn-secondary d-sm-block d-md-none" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+                <i class="fa-solid fa-bars"></i>
+              </a>
+                <span class="h5 mb-0"><strong>Dashboard</strong></span>
+
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <div class="dropdown">
+                      <button class="btn btn-light" type="button" id="user-dropdown-menu" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fa-solid fa-user"></i>
+                      </button>
+                      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="user-dropdown-menu" style="position: absolute">
+                        <li><a class="dropdown-item" href="#">New project...</a></li>
+                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Sign out</a></li>
+                      </ul>
+                    </div>
+                    
+                  </li>
+                </ul>
             </div>
+
         </nav>
        
+
+        <div id="main-content" class="container-fluid mt-3">
+          
+          <div class="row gy-3">
+            <div class="col-12 col-lg-6 h-100">
+              <div class="row gy-3">
+
+                <div class="col-6">
+                  <div class="card border-0 shadow">
+                    <div class="card-body">
+                        <div class="float-end">
+                          <h4><i class="fa-solid fa-users"></i></h4>
+                        </div>
+                        <h6 class="text-muted fw-normal mt-0">Students</h6>
+                        <h3 class="mt-3 mb-3">36,254</h3>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-6">
+                  <div class="card border-0 shadow">
+                    <div class="card-body">
+                        <div class="float-end">
+                          <h4><i class="fa-solid fa-file"></i></h4>
+                        </div>
+                        <h6 class="text-muted fw-normal mt-0">Number of CV</h6>
+                        <h3 class="mt-3 mb-3">56,108</h3>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-6">
+                  <div class="card border-0 shadow">
+                    <div class="card-body">
+                        <div class="float-end">
+                          <h4><i class="fa-solid fa-users"></i></h4>
+                        </div>
+                        <h6 class="text-muted fw-normal mt-0">Students</h6>
+                        <h3 class="mt-3 mb-3">36,254</h3>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-6">
+                  <div class="card border-0 shadow">
+                    <div class="card-body">
+                        <div class="float-end">
+                          <h4><i class="fa-solid fa-file"></i></h4>
+                        </div>
+                        <h6 class="text-muted fw-normal mt-0">Number of CV</h6>
+                        <h3 class="mt-3 mb-3">56,108</h3>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              </div>
+
+
+            <div class="col-12 col-lg-6">
+
+              <div class="card border-0 shadow h-100">
+                <div class="card-body">
+                  <h6 class="text-muted">Number Of School</h6>
+                  <canvas id="canvas1"></canvas>
+                </div>
+              </div>
+              
+            </div>
+          </div>
+
+        </div>
     </div>
 </div>
 
