--- a/server/templates/include.html
+++ b/server/templates/include.html
@@ -24,3 +24,5 @@ crossorigin="anonymous"></script>
 
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
