--- a/server/student/templates/student/createCvForm.html
+++ b/server/student/templates/student/createCvForm.html
@@ -16,82 +16,80 @@
 <body>
     <div class="container">
 
-    
-    <div class="formbold-main-wrapper">
-        <!-- Author: FormBold Team -->
-        <!-- Learn More: https://formbold.com -->
-        <div class="formbold-form-wrapper">
-            <form action="https://formbold.com/s/FORM_ID" method="POST">
-                <div class="formbold-mb-5">
-                    <label for="name" class="formbold-form-label"> Full Name </label>
-                    <input type="text" name="name" id="name" placeholder="Full Name" class="formbold-form-input" />
-                </div>
-                <div class="formbold-mb-5">
-                    <label for="phone" class="formbold-form-label"> Phone Number </label>
-                    <input type="text" name="phone" id="phone" placeholder="Enter your phone number"
-                        class="formbold-form-input" />
-                </div>
-                <div class="formbold-mb-5">
-                    <label for="email" class="formbold-form-label"> Email Address </label>
-                    <input type="email" name="email" id="email" placeholder="Enter your email"
-                        class="formbold-form-input" />
-                </div>
-                <div class="flex flex-wrap formbold--mx-3">
-                    <div class="w-full sm:w-half formbold-px-3">
-                        <div class="formbold-mb-5 w-full">
-                            <label for="date" class="formbold-form-label"> Date </label>
-                            <input type="date" name="date" id="date" class="formbold-form-input" />
-                        </div>
-                    </div>
-                    <div class="w-full sm:w-half formbold-px-3">
-                        <div class="formbold-mb-5">
-                            <label for="time" class="formbold-form-label"> Time </label>
-                            <input type="time" name="time" id="time" class="formbold-form-input" />
-                        </div>
-                    </div>
-                </div>
 
-                <div class="formbold-mb-5 formbold-pt-3">
-                    <label class="formbold-form-label formbold-form-label-2">
-                        Address Details
-                    </label>
+        <div class="formbold-main-wrapper">
+            <!-- Author: FormBold Team -->
+            <!-- Learn More: https://formbold.com -->
+            <div class="formbold-form-wrapper">
+                <form action="https://formbold.com/s/FORM_ID" method="POST">
+                    <div class="formbold-mb-5">
+                        <label for="name" class="formbold-form-label"> Full Name </label>
+                        <input type="text" name="name" id="name" placeholder="Full Name" class="formbold-form-input" />
+                    </div>
+                    <div class="formbold-mb-5">
+                        <label for="phone" class="formbold-form-label"> Phone Number </label>
+                        <input type="text" name="phone" id="phone" placeholder="Enter your phone number"
+                            class="formbold-form-input" />
+                    </div>
+                    <div class="formbold-mb-5">
+                        <label for="email" class="formbold-form-label"> Email Address </label>
+                        <input type="email" name="email" id="email" placeholder="Enter your email"
+                            class="formbold-form-input" />
+                    </div>
                     <div class="flex flex-wrap formbold--mx-3">
                         <div class="w-full sm:w-half formbold-px-3">
-                            <div class="formbold-mb-5">
-                                <input type="text" name="area" id="area" placeholder="Enter area"
-                                    class="formbold-form-input" />
+                            <div class="formbold-mb-5 w-full">
+                                <label for="date" class="formbold-form-label"> Date </label>
+                                <input type="date" name="date" id="date" class="formbold-form-input" />
                             </div>
                         </div>
                         <div class="w-full sm:w-half formbold-px-3">
                             <div class="formbold-mb-5">
-                                <input type="text" name="city" id="city" placeholder="Enter city"
-                                    class="formbold-form-input" />
-                            </div>
-                        </div>
-                        <div class="w-full sm:w-half formbold-px-3">
-                            <div class="formbold-mb-5">
-                                <input type="text" name="state" id="state" placeholder="Enter state"
-                                    class="formbold-form-input" />
-                            </div>
-                        </div>
-                        <div class="w-full sm:w-half formbold-px-3">
-                            <div class="formbold-mb-5">
-                                <input type="text" name="post-code" id="post-code" placeholder="Post Code"
-                                    class="formbold-form-input" />
+                                <label for="time" class="formbold-form-label"> Time </label>
+                                <input type="time" name="time" id="time" class="formbold-form-input" />
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div>
-                    <button class="formbold-btn">Book Appointment</button>
-                </div>
-            </form>
+                    <div class="formbold-mb-5 formbold-pt-3">
+                        <label class="formbold-form-label formbold-form-label-2">
+                            Address Details
+                        </label>
+                        <div class="flex flex-wrap formbold--mx-3">
+                            <div class="w-full sm:w-half formbold-px-3">
+                                <div class="formbold-mb-5">
+                                    <input type="text" name="area" id="area" placeholder="Enter area"
+                                        class="formbold-form-input" />
+                                </div>
+                            </div>
+                            <div class="w-full sm:w-half formbold-px-3">
+                                <div class="formbold-mb-5">
+                                    <input type="text" name="city" id="city" placeholder="Enter city"
+                                        class="formbold-form-input" />
+                                </div>
+                            </div>
+                            <div class="w-full sm:w-half formbold-px-3">
+                                <div class="formbold-mb-5">
+                                    <input type="text" name="state" id="state" placeholder="Enter state"
+                                        class="formbold-form-input" />
+                                </div>
+                            </div>
+                            <div class="w-full sm:w-half formbold-px-3">
+                                <div class="formbold-mb-5">
+                                    <input type="text" name="post-code" id="post-code" placeholder="Post Code"
+                                        class="formbold-form-input" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </form>
+            </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
+        <div class="row">
+            <div class="repeaterFormPadding">
             <!-- repeat education -->
             <div id="repeaterEdu">
                 <!-- Repeater Heading -->
@@ -108,7 +106,7 @@
                     <div class="item-content">
                         <div class="form-group">
                             <label for="inputEdu" class="col-lg-2 control-label">School Name</label>
-                            <div class="col-lg-10">
+                            <div class="col-lg-10 inputBox">
                                 <input type="text" class="form-control" id="inputName" placeholder="Name"
                                     data-name="name">
                             </div>
@@ -120,7 +118,7 @@
                                     data-skip-name="true" data-name="description"></input>
                             </div>
                             <label for="inputEdu" class="col-lg-2 control-label formPadding">End Date</label>
-                            <div class="col-lg-10">
+                            <div class="col-lg-10 inputBox">
                                 <input type="date" class="form-control" id="startDate" placeholder="EndDate"
                                     data-skip-name="true" data-name="description"></input>
                             </div>
@@ -194,15 +192,14 @@
 
                 </div>
                 <!-- Repeater End -->
+                </div>
+
             </div>
+            <div>
+                <button class="formbold-btn">Book Appointment</button>
+            </div>
+
         </div>
-
-
-
-     
-       
-
-</div>
 </body>
 <script src="../../static/student/js/repeater.js" type="text/javascript"></script>
 <script>
