--- a/server/student/static/student/cvForm.css
+++ b/server/student/static/student/cvForm.css
@@ -6,6 +6,12 @@
 
   body {
       font-family: "Inter", Arial, Helvetica, sans-serif;
+      background-image: url("https://marketplace.canva.com/EAD2962NKnQ/2/0/1600w/canva-rainbow-gradient-pink-and-purple-virtual-background-_Tcjok-d9b4.jpg");
+      height: 100%;
+      /* Center and scale the image nicely */
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
   }
 
   .formbold-mb-5 {
@@ -27,7 +33,7 @@
       margin: 0 auto;
       /* max-width: 550px; */
       width: 100%;
-      background: white;
+      /* background: white; */
   }
 
   .formbold-form-label {
@@ -120,6 +126,40 @@
       font-size: 20px;
   }
 
-  .inputBox{
-        padding-bottom: 20px;
+  .inputBox {
+      padding-bottom: 20px;
+  }
+
+  .formbold-mb-5 .formPadding {
+      font-size: 23px;
+      padding-bottom: 10px;
+      background-color: #0000;
+  }
+
+  .formbold-form-input {
+      box-shadow: inset 0 -1px 0 black;
+  }
+
+  .formbold-mb-5 input[type=text] {
+      border: none;
+      outline: none;
+      border-bottom: 1px solid black;
+  }
+
+  .formbold-mb-5 textarea[type=text] {
+      border: none;
+      outline: none;
+      border-bottom: 1px solid black;
+  }
+
+  .inputBox input[type=text] {
+      border: none;
+      outline: none;
+      border-bottom: 1px solid black;
+  }
+
+  .col-lg-10 input[type=text] {
+      border: none;
+      outline: none;
+      border-bottom: 1px solid black;
   }
