--- a/server/manager/templates/manager/dashboard.html
+++ b/server/manager/templates/manager/dashboard.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'manager/manager_base.html' %}
 
 {% block javascript %}
 <script>
-const data = {
+const data1 = {
   labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
   datasets: [{
     label: 'Looping tension',
@@ -12,9 +12,9 @@ const data = {
   }]
 };
 
-const config = {
+const config1 = {
   type: 'line',
-  data: data,
+  data: data1,
   options: {
     animations: {
       tension: {
@@ -34,151 +34,126 @@ const config = {
   }
 };
 
-var chart = new Chart(document.getElementById("canvas1"), config)
+var chart1 = new Chart(document.getElementById("canvas1"), config1)
 
 
+
+const DATA_COUNT = 5;
+const NUMBER_CFG = {count: DATA_COUNT, min: 0, max: 100};
+
+const data2 = {
+  labels: [
+    'Red',
+    'Blue',
+    'Yellow'
+  ],
+  datasets: [{
+    label: 'My First Dataset',
+    data: [300, 50, 100],
+    backgroundColor: [
+      'rgb(255, 99, 132)',
+      'rgb(54, 162, 235)',
+      'rgb(255, 205, 86)'
+    ],
+    hoverOffset: 4
+  }]
+};
+
+const config2 = {
+  type: 'doughnut',
+  data: data2,
+};
+
+var chart2 = new Chart(document.getElementById("canvas2"), config2)
+
+$(document).ready(()=>{
+  $("#offcanvasExample").html()
+})
 
 </script>
 {% endblock %}
 
-{% block content %}
-<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-</div>
+{% block manager_content %}
+<div class="row gy-3">
+          <div class="col-12 h-100">
+            <div class="row gy-3">
 
-<div class="main" style="position: absolute;height: 100%; width: 100%">
+              <div class="col-6 col-md-6 col-lg-3">
+                <div class="card border-0 shadow">
+                  <div class="card-body">
+                      <div class="float-end">
+                        <h4><i class="fa-solid fa-users"></i></h4>
+                      </div>
+                      <h6 class="text-muted fw-normal mt-0">Students</h6>
+                      <h3 class="mt-3 mb-3">36,254</h3>
+                  </div>
+                </div>
+              </div>
 
-    <div id="manager-sidenav" class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 260px;height:100%; position: fixed;">
-        <a href="/manager" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-            <img src="/static/HKBU_Logo.svg" class="pe-3" width="55" height="55">
-          <span class="fs-5">HKBU</span>
-        </a>
-        <br>
+              <div class="col-6 col-md-6 col-lg-3">
+                <div class="card border-0 shadow">
+                  <div class="card-body">
+                      <div class="float-end">
+                        <h4><i class="fa-solid fa-file"></i></h4>
+                      </div>
+                      <h6 class="text-muted fw-normal mt-0">Number of CV</h6>
+                      <h3 class="mt-3 mb-3">56,108</h3>
+                  </div>
+                </div>
+              </div>
 
-        <h6 class="text-muted">Navigation</h6>
-        <ul class="nav nav-pills flex-column mb-auto">
-          <li>
-            <a href="#" class="nav-link text-white active">
-                <i class="fa-solid fa-gauge"></i>
-              Dashboard
-            </a>
-          </li>
-          <li>
-            <a href="#" class="nav-link text-white">
-                <i class="fa-solid fa-users"></i>
-              Students
-            </a>
-          </li>
-        </ul>
-    </div>
+              <div class="col-6 col-md-6 col-lg-3">
+                <div class="card border-0 shadow">
+                  <div class="card-body">
+                      <div class="float-end">
+                        <h4><i class="fa-solid fa-users"></i></h4>
+                      </div>
+                      <h6 class="text-muted fw-normal mt-0">Students</h6>
+                      <h3 class="mt-3 mb-3">36,254</h3>
+                  </div>
+                </div>
+              </div>
 
+              <div class="col-6 col-md-6 col-lg-3">
+                <div class="card border-0 shadow">
+                  <div class="card-body">
+                      <div class="float-end">
+                        <h4><i class="fa-solid fa-file"></i></h4>
+                      </div>
+                      <h6 class="text-muted fw-normal mt-0">Number of CV</h6>
+                      <h3 class="mt-3 mb-3">56,108</h3>
+                  </div>
+                </div>
+              </div>
 
-      
-    <div id="manager-content" style="width: calc(100% - 260px); margin-left: 260px;height: 100%">
-        
-        <nav class="navbar navbar-light bg-white shadow-sm" id="manager-nav"> 
-            <div class="container-fluid align-content-center">
-              <a class="btn btn-secondary d-sm-block d-md-none" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
-                <i class="fa-solid fa-bars"></i>
-              </a>
-                <span class="h5 mb-0"><strong>Dashboard</strong></span>
-
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <div class="dropdown">
-                      <button class="btn btn-light" type="button" id="user-dropdown-menu" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fa-solid fa-user"></i>
-                      </button>
-                      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="user-dropdown-menu" style="position: absolute">
-                        <li><a class="dropdown-item" href="#">New project...</a></li>
-                        <li><a class="dropdown-item" href="#">Settings</a></li>
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Sign out</a></li>
-                      </ul>
-                    </div>
-                    
-                  </li>
-                </ul>
             </div>
 
-        </nav>
-       
+          </div>
 
-        <div id="main-content" class="container-fluid mt-3">
-          
-          <div class="row gy-3">
-            <div class="col-12 col-lg-6 h-100">
-              <div class="row gy-3">
 
-                <div class="col-6">
-                  <div class="card border-0 shadow">
-                    <div class="card-body">
-                        <div class="float-end">
-                          <h4><i class="fa-solid fa-users"></i></h4>
-                        </div>
-                        <h6 class="text-muted fw-normal mt-0">Students</h6>
-                        <h3 class="mt-3 mb-3">36,254</h3>
-                    </div>
+          <div class="col-12">
+            <div class="row gy-3">
+
+              <div class="col-12 col-lg-7">
+                <div class="card border-0 shadow h-100">
+                  <div class="card-body">
+                    <h6 class="text-muted">Number Of School</h6>
+                    <canvas id="canvas1"></canvas>
                   </div>
                 </div>
-
-                <div class="col-6">
-                  <div class="card border-0 shadow">
-                    <div class="card-body">
-                        <div class="float-end">
-                          <h4><i class="fa-solid fa-file"></i></h4>
-                        </div>
-                        <h6 class="text-muted fw-normal mt-0">Number of CV</h6>
-                        <h3 class="mt-3 mb-3">56,108</h3>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-6">
-                  <div class="card border-0 shadow">
-                    <div class="card-body">
-                        <div class="float-end">
-                          <h4><i class="fa-solid fa-users"></i></h4>
-                        </div>
-                        <h6 class="text-muted fw-normal mt-0">Students</h6>
-                        <h3 class="mt-3 mb-3">36,254</h3>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-6">
-                  <div class="card border-0 shadow">
-                    <div class="card-body">
-                        <div class="float-end">
-                          <h4><i class="fa-solid fa-file"></i></h4>
-                        </div>
-                        <h6 class="text-muted fw-normal mt-0">Number of CV</h6>
-                        <h3 class="mt-3 mb-3">56,108</h3>
-                    </div>
-                  </div>
-                </div>
-
               </div>
 
-              </div>
-
-
-            <div class="col-12 col-lg-6">
-
-              <div class="card border-0 shadow h-100">
-                <div class="card-body">
-                  <h6 class="text-muted">Number Of School</h6>
-                  <canvas id="canvas1"></canvas>
+              <div class="col-12 col-lg-5">
+                <div class="card border-0 shadow h-100">
+                  <div class="card-body">
+                    <h6 class="text-muted">Number Of School</h6>
+                    <canvas id="canvas2"></canvas>
+                  </div>
                 </div>
               </div>
-              
             </div>
+
           </div>
 
         </div>
-    </div>
-</div>
-
-
 {% endblock %}
-
