--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -8,7 +8,8 @@
   </style>
   <body class="bg-light">
     {% if nav == 'student' %}
-      {% include 'nav_student.html' %}
+      <!-- {% include 'nav_student.html' %} -->
+      {% include 'header_student.html' %}
     {% elif nav == 'manager'%}
       {% include 'nav_manager.html' %}
     {% endif %}
