--- a/server/student/static/student/cvForm.css
+++ b/server/student/static/student/cvForm.css
@@ -6,7 +6,7 @@
 
   body {
       font-family: "Inter", Arial, Helvetica, sans-serif;
-      background-image: url("https://marketplace.canva.com/EAD2962NKnQ/2/0/1600w/canva-rainbow-gradient-pink-and-purple-virtual-background-_Tcjok-d9b4.jpg");
+      /* background-image: url("https://marketplace.canva.com/EAD2962NKnQ/2/0/1600w/canva-rainbow-gradient-pink-and-purple-virtual-background-_Tcjok-d9b4.jpg"); */
       height: 100%;
       /* Center and scale the image nicely */
       background-position: center;
@@ -14,6 +14,7 @@
       background-size: cover;
   }
 
+ 
   .formbold-mb-5 {
       margin-bottom: 20px;
   }
@@ -136,6 +137,13 @@
       background-color: #0000;
   }
 
+   .repeater-heading .formPadding {
+       font-size: 23px;
+       padding-bottom: 10px;
+       background-color: #0000;
+   }
+  
+
   .formbold-form-input {
       box-shadow: inset 0 -1px 0 black;
   }
@@ -163,3 +171,10 @@
       outline: none;
       border-bottom: 1px solid black;
   }
+
+    .placeholderStyle .skillBox  ::placeholder{
+       /* Chrome, Firefox, Opera, Safari 10.1+ */
+       color: blue;
+       opacity: 1;
+       /* Firefox */
+   }
