--- a/server/manager/templates/manager/student_filter.html
+++ b/server/manager/templates/manager/student_filter.html
@@ -71,8 +71,7 @@
               </button>
                 </div>
                 <div class="modal-body" style="overflow: auto">
-                    <input type="hidden" id="email-receiver" name="email-receiver">
-                    {% csrf_token %}
+                    <input type="hidden" id="email-receiver" name="email-receiver"> {% csrf_token %}
                     <textarea class="form-control" id="email-content" rows="3" style="height: 100%; max-height: 100px"></textarea>
 
                     </textarea>
@@ -89,7 +88,7 @@
 {% endblock %} {% block javascript %}
 <script>
     $(document).ready(function() {
-        
+
         $('.menu-toggle').click(function() {
             $('nav').toggleClass('menu')
         })
@@ -142,49 +141,47 @@
 
 
 
-    function setEmailReceiver(receiver){
+    function setEmailReceiver(receiver) {
         //receiver can be studnet id or "all"
         $("#email-receiver").val(receiver)
     }
 
-    $("#send-email-btn").click(()=>{
+    $("#send-email-btn").click(() => {
 
-        fetch('/manager/send_email_to_student',{
-            method: 'POST',
-            headers: {'X-CSRFToken': document.querySelector('[name=csrfmiddlewaretoken]').value},
-            body: JSON.stringify({
-                student_id: $("#email-receiver").val(),
-                email_content: conv.makeHtml(simplemde.value())
+        fetch('/manager/send_email_to_student', {
+                method: 'POST',
+                headers: {
+                    'X-CSRFToken': document.querySelector('[name=csrfmiddlewaretoken]').value
+                },
+                body: JSON.stringify({
+                    student_id: $("#email-receiver").val(),
+                    email_content: conv.makeHtml(simplemde.value())
+                })
+            }).then(response => response.json())
+            .then((json) => {
+                Swal.fire({
+                        title: 'Send email Successfully',
+                        text: 'Success',
+                        icon: 'success',
+                        showCancelButton: true,
+                        showDenyButton: false,
+                        showCancelButton: false,
+                        confirmButtonText: 'OK'
+                    })
+                    //delayURL("/manager/student_filter")
             })
-        }).then(response => response.json())
-        .then((json)=>{
-            Swal.fire({
-                title: 'Send email Successfully',
-                text: 'Success',
-                icon: 'success',
-                showCancelButton: true,
-                showDenyButton: false,
-                showCancelButton: false,
-                confirmButtonText: 'OK'
-            })
-            //delayURL("/manager/student_filter")
-        })
     })
-    
-    var conv = new showdown.Converter({metadata: true});
 
-    var simplemde = new SimpleMDE({ 
+    var conv = new showdown.Converter({
+        metadata: true
+    });
+
+    var simplemde = new SimpleMDE({
         element: document.getElementById("email-content"),
         autoDownloadFontAwesome: false,
         placeholder: "Type here...",
         spellChecker: false
     });
-
-
-
-
-
-
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
