--- a/server/templates/nav_manager.html
+++ b/server/templates/nav_manager.html
@@ -1,22 +1,23 @@
-
 <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="/static/HKBU_Logo.svg" width="30" height="30" />
-        HKBU
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="#">
+            <img src="/static/HKBU_Logo.svg" width="30" height="30" /> HKBU
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/manager/student_filter">Students Filter</a>
-          </li>
-        </ul>
-      </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/manager/student_filter">Students Filter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/manager/create_Job">Create Job</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
