--- a/server/templates/nav_student.html
+++ b/server/templates/nav_student.html
@@ -1,29 +1,24 @@
+<link rel="stylesheet" href="../static/css/index.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
-<nav class="navbar navbar-expand bg-body-tertiary bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="/static/HKBU_Logo.svg" width="30" height="30" />
-        HKBU
-      </a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/student">Home</a>
-          </li>
-        </ul>
-      </div>
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <button class="btn btn-dark" data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fa-solid fa-user"></i>
-          </button>
-          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" style="position:absolute">
-            <li><a class="dropdown-item" href="/student/cvProfile">Profile</a></li>
-            <li><a class="dropdown-item" href="/student/cvRecord">My CV Records</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/logout">Logout</a></li>
-          </ul>
-        </li>
-      </ul>
+<body>
+
+    <div class="scrollToTop-btn">
+        <i class="fas fa-angle-up"></i>
     </div>
-</nav>
+
+    <header>
+        <a href="#" class="brand">Jacob</a>
+        <div class="menu-btn"></div>
+        <div class="navigation">
+            <a href="#main">Home</a>
+            <a href="#about">About</a>
+            <a href="#skills">Skills</a>
+            <a href="#services">Services</a>
+            <a href="#work">Work</a>
+            <a href="#contact">Contact</a>
+        </div>
+    </header>
+
+</body>
+<script src="../static/js/header.js" charset="utf-8"></script>
