--- a/server/manager/templates/manager/manager_base.html
+++ b/server/manager/templates/manager/manager_base.html
@@ -1,12 +1,8 @@
-{% extends 'base.html' %}
-
-
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <script>
-$(document).ready(()=>{
-  $("#offcanvasExample").append($("#manager-sidenav").clone().attr("id",""))
-})
+    $(document).ready(() => {
+        $("#offcanvasExample").append($("#manager-sidenav").clone().attr("id", ""))
+    })
 </script>
 
 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel" style="background-color: transparent; width: 260px;">
@@ -14,67 +10,67 @@ $(document).ready(()=>{
 
 <div class="main" style="position: absolute;height: 100%; width: 100%">
 
-  <div id="manager-sidenav" class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 260px;height:100%; position: fixed;">
-      <a href="/manager" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-          <img src="/static/HKBU_Logo.svg" class="pe-3" width="55" height="55">
-        <span class="fs-5">HKBU</span>
-      </a>
-      <br>
+    <div id="manager-sidenav" class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 260px;height:100%; position: fixed;">
+        <a href="/manager" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+            <img src="/static/HKBU_Logo.svg" class="pe-3" width="55" height="55">
+            <span class="fs-5">HKBU</span>
+        </a>
+        <br>
 
-      <h6 class="text-muted">Navigation</h6>
-      <ul class="nav nav-pills flex-column mb-auto">
-        <li>
-          <a href="#" class="nav-link text-white active">
-              <i class="fa-solid fa-gauge"></i>
-              Dashboard
-          </a>
-        </li>
-        <li>
-          <a href="#" class="nav-link text-white">
-              <i class="fa-solid fa-users"></i>
-              Students
-          </a>
-        </li>
-      </ul>
-  </div>
+        <h6 class="text-muted">Navigation</h6>
+        <ul class="nav nav-pills flex-column mb-auto">
+            <li>
+                <a href="#" class="nav-link text-white active">
+                    <i class="fa-solid fa-gauge"></i> Dashboard
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-link text-white">
+                    <i class="fa-solid fa-users"></i> Students
+                </a>
+            </li>
+        </ul>
+    </div>
 
 
-    
-  <div id="manager-content" style="width: calc(100% - 260px); margin-left: 260px;height: 100%">
-      
-      <nav class="navbar navbar-light bg-white shadow-sm" id="manager-nav"> 
-          <div class="container-fluid align-content-center">
-            <a class="btn btn-light d-sm-block d-md-none" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
-              <i class="fa-solid fa-bars"></i>
-            </a>
-              <span class="h5 mb-0"><strong>Dashboard</strong></span>
 
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <div class="dropdown">
-                    <button class="btn btn-light" type="button" id="user-dropdown-menu" data-bs-toggle="dropdown" aria-expanded="false">
+    <div id="manager-content" style="width: calc(100% - 260px); margin-left: 260px;height: 100%">
+
+        <nav class="navbar navbar-light bg-white shadow-sm" id="manager-nav">
+            <div class="container-fluid align-content-center">
+                <a class="btn btn-light d-sm-block d-md-none" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+                    <i class="fa-solid fa-bars"></i>
+                </a>
+                <span class="h5 mb-0"><strong>Dashboard</strong></span>
+
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <div class="dropdown">
+                            <button class="btn btn-light" type="button" id="user-dropdown-menu" data-bs-toggle="dropdown" aria-expanded="false">
                       <i class="fa-solid fa-user"></i>
                     </button>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="user-dropdown-menu" style="position: absolute">
-                      <li><a class="dropdown-item" href="#">New project...</a></li>
-                      <li><a class="dropdown-item" href="#">Settings</a></li>
-                      <li><a class="dropdown-item" href="#">Profile</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Sign out</a></li>
-                    </ul>
-                  </div>
-                  
-                </li>
-              </ul>
-          </div>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="user-dropdown-menu" style="position: absolute">
+                                <li><a class="dropdown-item" href="#">New project...</a></li>
+                                <li><a class="dropdown-item" href="#">Settings</a></li>
+                                <li><a class="dropdown-item" href="#">Profile</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                            </ul>
+                        </div>
 
-      </nav>
-     
+                    </li>
+                </ul>
+            </div>
 
-      <div id="main-content" class="container-fluid mt-3 pb-3">
-        {% block manager_content %}{% endblock %}
-      </div>
+        </nav>
 
-  </div>
+
+        <div id="main-content" class="container-fluid mt-3 pb-3">
+            {% block manager_content %}{% endblock %}
+        </div>
+
+    </div>
 </div>
 {% endblock %}
