update UI/UX of create cv form page and saving new data of CV in the database.

--- a/server/login/templates/login/login.html
+++ b/server/login/templates/login/login.html
@@ -81,7 +81,7 @@
                     })
 
                     if (result.is_student)
-                    <!-- delayURL("/student/cvRecord") -->
+                    // delayURL("/student/cvRecord") 
                         delayURL("/student/checkLogin")
                     else
                         delayURL("/manager/student_filter")
@@ -96,7 +96,6 @@
                         showCancelButton: false,
                         confirmButtonText: 'OK'
                     })
-                    console.log('Fail');
                 }
             },
             error: function(jqXHR, textStatus, errorThrown) {
