--- a/server/student/templates/student/create_cv.html
+++ b/server/student/templates/student/create_cv.html
@@ -73,6 +73,23 @@
 
 <div class="container pt-3" style="margin-top: 100px;">
 
+    
+    <div class="card">
+        <div class="card-header">
+            <h5 class="mb-0">Personal Information</h5>
+        </div>
+        <div class="card-body">
+            <div class="col-12 mb-3 d-flex justify-content-center">
+                <img class="rounded-circle" src="/static/images/default-avatar.png"
+                    style="width: 100px; height: 100px; object-fit:cover" id="icon-preview">
+            </div>
+            <div class="col-12 mb-3">
+                <label class="form-label" for="profileIcon">Upload your portrait</label>
+                <input type="file" class="form-control" id="profileIcon" />
+            </div>
+        </div>
+    </div>
+
     <div class="card">
         <div class="card-header">
             <h5 class="mb-0">Personal Information</h5>
@@ -137,6 +154,11 @@
     </div>
 
     <br>
+
+    <div class="d-flex flex-row-reverse mb-3">
+        <button class="btn btn-primary" onclick="fetchRequsetCreateCV()">Create</button>
+    </div>
+
 </div>
 {% endblock %}
 
@@ -146,6 +168,7 @@
 <script>
     var educations = []
     var workExperiences = []
+    var base64ImgProfileIcon = ''
 
     function handleSaveEducationData(){
         let institution = $("#institution").val()
@@ -262,6 +285,7 @@
         fetch("/student/create_new_cv",{
             method: "POST",
             body: JSON.stringify({
+                base64ImgProfileIcon: base64ImgProfileIcon,
                 cvName: $("#cv-name").val(),
                 firstName: $("#first-name").val(),
                 lastName: $("#last-name").val(),
@@ -270,9 +294,40 @@
                 bio: $("#bio").val(),
                 educations: educations,
                 workExperiences: workExperiences
-            }).then(response => response.json()).then(json => console.log(json))
+            })
+        }).then(response => response.json()).then((json) => {
+            Swal.fire({
+                        title: 'CV Status',
+                        text: json.status ? 'Create CV Successfully' : 'Fail to create CV',
+                        icon: json.status ? 'success' : 'error',
+                        showCancelButton: true,
+                        showDenyButton: false,
+                        showCancelButton: false,
+                        confirmButtonText: 'OK'
+            })
+
+            //if server save CV successfully than redirect the page to "cvRecord" after 2 seconds
+            if(json.status){
+                setTimeout(function() {
+                    window.location.href = "/student/cvRecord";
+                }, 2000);
+            }
         })
 
     }
+
+    $(document).ready(()=>{
+        $("#profileIcon").change((e) => {
+            let file = $("#profileIcon")[0].files[0]
+            const reader = new FileReader()
+            reader.readAsDataURL(file)
+            reader.onload = function () {
+                const base64String = reader.result
+                // console.log(base64String);
+                base64ImgProfileIcon = base64String //global
+                $("#icon-preview").attr("src", base64String)
+            };
+        })
+    })
 </script>
 {% endblock %}
