--- a/server/student/templates/student/checkLogin.html
+++ b/server/student/templates/student/checkLogin.html
@@ -12,7 +12,8 @@
 </body>
 {% if isCvEmpty %}
 <script>
-    window.location.href = "https://www.youtube.com/watch?v=nQK8BabzxWc&ab_channel=EHPMusicChannel";
+    //window.location.href = "https://www.youtube.com/watch?v=nQK8BabzxWc&ab_channel=EHPMusicChannel";
+    window.location.href = "/student/";
 </script>
 
 {% else %}
