--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -14,7 +14,10 @@
  
     {% endif %}
     
-    {% block content %}{% endblock %}
+    <div style="margin-top: 100px">
+      {% block content %}{% endblock %}
+    </div>
+    
   </body>
   {% block javascript %}
   {% endblock %}
